@@ -1,3 +1,8 @@
+13-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
+ * clarin_backend/mongodb_views.py:
+ * clarin_backend/utils.py:
+ * docker/docker-compose.yml: Fixes for docker/podman.
+
 05-January-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
  * backend-django/DjangoClarin/settings.py:
  * backend-django/clarin_backend/urls.py:
